--- a/DirectXGame2.vcxproj.filters
+++ b/DirectXGame2.vcxproj.filters
@@ -201,9 +201,6 @@
     <ClCompile Include="MyMath.cpp">
       <Filter>ソース ファイル\Engine\Utility\Math</Filter>
     </ClCompile>
-    <ClCompile Include="Camera.cpp">
-      <Filter>ソース ファイル\Engine\3d\Camera</Filter>
-    </ClCompile>
     <ClCompile Include="CollisionManager.cpp">
       <Filter>ソース ファイル\Engine\Utility\Collision</Filter>
     </ClCompile>
@@ -276,11 +273,14 @@
     <ClCompile Include="GlobalVariables.cpp">
       <Filter>ソース ファイル\Engine\Utility</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\3D\ViewProjection.cpp">
-      <Filter>ソース ファイル\Engine\3d</Filter>
-    </ClCompile>
     <ClCompile Include="Engine\3D\WorldTransform\WorldTransform.cpp">
       <Filter>ソース ファイル\Engine\3d\WorldTransform</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\3D\Camera\DebugCamera.cpp">
+      <Filter>ソース ファイル\Engine\3d\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\3D\Camera\Camera.cpp">
+      <Filter>ソース ファイル\Engine\3d\Camera</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -316,9 +316,6 @@
     </ClInclude>
     <ClInclude Include="Matrix4x4.h">
       <Filter>ヘッダー ファイル\Engine\Utility\Math</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>ヘッダー ファイル\Engine\3d\Camera</Filter>
     </ClInclude>
     <ClInclude Include="Collider.h">
       <Filter>ヘッダー ファイル\Engine\Utility\Collision</Filter>
@@ -419,11 +416,14 @@
     <ClInclude Include="resource.h">
       <Filter>ヘッダー ファイル\Engine\Base</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\3D\ViewProjection.h">
-      <Filter>ヘッダー ファイル\Engine\3d</Filter>
-    </ClInclude>
     <ClInclude Include="Engine\3D\WorldTransform\WorldTransform.h">
       <Filter>ヘッダー ファイル\Engine\3d\WorldTransform</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\3D\Camera\DebugCamera.h">
+      <Filter>ヘッダー ファイル\Engine\3d\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\3D\Camera\Camera.h">
+      <Filter>ヘッダー ファイル\Engine\3d\Camera</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
