--- a/DirectXGame2.vcxproj.filters
+++ b/DirectXGame2.vcxproj.filters
@@ -204,12 +204,6 @@
     <ClCompile Include="CollisionManager.cpp">
       <Filter>ソース ファイル\Engine\Utility\Collision</Filter>
     </ClCompile>
-    <ClCompile Include="Audio.cpp">
-      <Filter>ソース ファイル\Engine\Components\Audio</Filter>
-    </ClCompile>
-    <ClCompile Include="Input.cpp">
-      <Filter>ソース ファイル\Engine\Components\Input</Filter>
-    </ClCompile>
     <ClCompile Include="Triangle.cpp">
       <Filter>ソース ファイル\Engine\2d</Filter>
     </ClCompile>
@@ -282,6 +276,12 @@
     <ClCompile Include="Engine\3D\Camera\Camera.cpp">
       <Filter>ソース ファイル\Engine\3d\Camera</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Components\Input\Input.cpp">
+      <Filter>ソース ファイル\Engine\Components\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Components\Audio\Audio.cpp">
+      <Filter>ソース ファイル\Engine\Components\Audio</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
@@ -325,12 +325,6 @@
     </ClInclude>
     <ClInclude Include="CollisionManager.h">
       <Filter>ヘッダー ファイル\Engine\Utility\Collision</Filter>
-    </ClInclude>
-    <ClInclude Include="Audio.h">
-      <Filter>ヘッダー ファイル\Engine\Components\Audio</Filter>
-    </ClInclude>
-    <ClInclude Include="Input.h">
-      <Filter>ヘッダー ファイル\Engine\Components\Input</Filter>
     </ClInclude>
     <ClInclude Include="Sprite.h">
       <Filter>ヘッダー ファイル\Engine\2d</Filter>
@@ -424,6 +418,12 @@
     </ClInclude>
     <ClInclude Include="Engine\3D\Camera\Camera.h">
       <Filter>ヘッダー ファイル\Engine\3d\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Components\Audio\Audio.h">
+      <Filter>ヘッダー ファイル\Engine\Components\Audio</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\Components\Input\Input.h">
+      <Filter>ヘッダー ファイル\Engine\Components\Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
