Sceneのファイル分け完了

--- a/DirectXGame2.vcxproj
+++ b/DirectXGame2.vcxproj
@@ -30,16 +30,16 @@
     <ClCompile Include="Engine\externals\imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="Engine\externals\imgui\imgui_tables.cpp" />
     <ClCompile Include="Engine\externals\imgui\imgui_widgets.cpp" />
-    <ClCompile Include="GameEndScene.cpp" />
-    <ClCompile Include="GamePlayScene.cpp" />
-    <ClCompile Include="GameStartScene.cpp" />
     <ClCompile Include="GlobalVariables.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="LoadCSV.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="MyMath.cpp" />
-    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Project\Game\Scenes\GameEndScene.cpp" />
+    <ClCompile Include="Project\Game\Scenes\GamePlayScene.cpp" />
+    <ClCompile Include="Project\Game\Scenes\GameStartScene.cpp" />
+    <ClCompile Include="Project\Game\Scenes\Manager\SceneManager.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Triangle.cpp" />
@@ -78,11 +78,7 @@
     <ClInclude Include="Engine\externals\imgui\imstb_rectpack.h" />
     <ClInclude Include="Engine\externals\imgui\imstb_textedit.h" />
     <ClInclude Include="Engine\externals\imgui\imstb_truetype.h" />
-    <ClInclude Include="GameEndScene.h" />
-    <ClInclude Include="GamePlayScene.h" />
-    <ClInclude Include="GameStartScene.h" />
     <ClInclude Include="GlobalVariables.h" />
-    <ClInclude Include="IScene.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="LoadCSV.h" />
     <ClInclude Include="Material.h" />
@@ -90,7 +86,11 @@
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelData.h" />
     <ClInclude Include="MyMath.h" />
-    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Project\Game\Scenes\GameEndScene.h" />
+    <ClInclude Include="Project\Game\Scenes\GamePlayScene.h" />
+    <ClInclude Include="Project\Game\Scenes\GameStartScene.h" />
+    <ClInclude Include="Project\Game\Scenes\IScene.h" />
+    <ClInclude Include="Project\Game\Scenes\Manager\SceneManager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceObject.h" />
     <ClInclude Include="Sphere.h" />
